Short Stories Share image changes for website + bug fixes

--- a/MyCity4Kids/MyCity4Kids/res/values/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values/strings.xml
@@ -504,6 +504,7 @@
     <string name="moderation_or_share.okay">OKAY</string>
     <string name="moderation_or_share.gplus_fail">Unable to share with google plus.</string>
     <string name="moderation_or_share.whatsapp_fail">Unable to share with whatsapp.</string>
+    <string name="moderation_or_share.facebook_fail">Unable to share with facebook.</string>
     <string name="moderation_or_share.whatsapp_not_installed">Whatsapp has not been installed.</string>
     <string name="moderation_or_share.twitter_fail">Unable to share with twitter.</string>
 
@@ -656,6 +657,7 @@
     <string name="author_type.user">USER</string>
 
     <string name="no_article.be_first">Be the first one to write articles in this category!</string>
+    <string name="no_story.be_first">Be the first one to write stories in this category!</string>
 
     <string name="random_text">Your trekking to Stok Kangri begins with the arrival to Leh. You can easily reach Leh once you come to Delhi. You can reach Leh from Delhi either through a flight or through the road. Taking the flight is a better option as you would be saving a lot on time and energy. Taking the road may cost you a lot of time as you have to first go to either Srinagar or Manali to start for Leh. You can spend a day in Leh to acclimatize to the weather. Trekking in the area of Leh is among the best options among Trekking in India</string>
     <string name="random_100_words">Trekking to Stok Kangri begins with the arrival to Leh. You can easily reach Leh once you come to Delhi. You can reach Leh from Delhi either through a flight Taking the flight is a better option as you would be saving a lot on time and energy. Taking the road may cost you a lot of time as you have to first go to either Srinagar or Manali to start for Leh. You can spend a day in Leh to acclimatize to the weather. Trekking in the area of Leh is among the best options among Trekking in India</string>
@@ -668,6 +670,7 @@
     <string name="short_s.add.body_hint">Write your amazing story or poem in 100 words or less.</string>
     <string name="short_s.publish_message">Congrats! Your story has been published.\n Share it with your friends and family.</string>
     <string name="short_s.post">POST</string>
+    <string name="short_s.max_word">Short story cannot have more than 100 words</string>
 
     <string name="report.reason">This content is inappropriate because</string>
     <string name="report.abuse">Abusive Content</string>
