--- a/MyCity4Kids/MyCity4Kids/res/values-bn/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-bn/strings.xml
@@ -344,7 +344,7 @@
     <string name="myprofile.following_label">অনুসরণ</string>
     <string name="myprofile.followers_label">অনুসরণকারী</string>
     <string name="myprofile.section.articles_label">প্রবন্ধগুলি</string>
-    <string name="myprofile.section.short_story_label">100 WORD STORY</string>
+    <string name="myprofile.section.short_story_label">#শত শব্দের গল্প</string>
     <string name="myprofile.section.videos_label">মায়েদের ভিডিও ব্লগস</string>
     <string name="myprofile.section.activity_label">কার্যকলাপ</string>
     <string name="myprofile.section.myranking_label">আমার র্যাংকিং</string>
@@ -614,7 +614,7 @@
     <string name="article_listing.type.editor_label">সম্পাদকের পছন্দ</string>
     <string name="article_listing.type.todays_best_label">আজকের সেরা</string>
     <string name="article_listing.type.for_you_label">আপনাদের জন্য</string>
-    <string name="article_listing.type.short_story_label">100WORDSTORY</string>
+    <string name="article_listing.type.short_story_label">#শত শব্দের গল্প</string>
     <string name="article_listing.type.languages_label">LANGUAGES</string>
     <string name="article_listing.type.videos_label">ভিডিও</string>
     <string name="article_listing.type.recent_label">নতুন</string>
@@ -657,4 +657,32 @@
     <string name="author_type.user">USER</string>
 
     <string name="no_article.be_first">এই ক্যাটাগরি তে প্রথম আর্টিকেল টি আপনি লিখুন</string>
+    <string name="no_story.be_first">Be the first one to write stories in this category!</string>
+
+    <string name="random_text">Your trekking to Stok Kangri begins with the arrival to Leh. You can easily reach Leh once you come to Delhi. You can reach Leh from Delhi either through a flight or through the road. Taking the flight is a better option as you would be saving a lot on time and energy. Taking the road may cost you a lot of time as you have to first go to either Srinagar or Manali to start for Leh. You can spend a day in Leh to acclimatize to the weather. Trekking in the area of Leh is among the best options among Trekking in India</string>
+    <string name="random_100_words">Trekking to Stok Kangri begins with the arrival to Leh. You can easily reach Leh once you come to Delhi. You can reach Leh from Delhi either through a flight Taking the flight is a better option as you would be saving a lot on time and energy. Taking the road may cost you a lot of time as you have to first go to either Srinagar or Manali to start for Leh. You can spend a day in Leh to acclimatize to the weather. Trekking in the area of Leh is among the best options among Trekking in India</string>
+    <string name="short_s.add_story">আপনার শতশব্দের গল্পটি লিখুন</string>
+    <string name="short_s.add_comment">মন্তব্য করুন</string>
+    <string name="short_s.add.title_hint">আপনার গল্পটির একটি আকর্ষণীয় শিরোনাম দিন। ক্যারেকটার লিমিট 60 বর্ন</string>
+    <string name="short_s.add.body_hint">শত শব্দের মধ্যে আপনার অপরূপ গল্প বা কবিতা লিখুন</string>
+    <string name="short_s.publish_message">Congrats! Your story has been published.\n Share it with your friends and family.</string>
+    <string name="short_s.max_word">আপনার গল্প টির সর্বাধিক শব্দ সংখ্যা</string>
+    <string name="short_s.choose_genre">আপনার গল্পের ধারা পছন্দ করুন</string>
+    <string name="short_s.choose_one_genre">আপনার গল্পটি যে ধারা বা অনুভূতি কে সবচেয়ে বেশি প্রকাশ করে,সেটি পছন্দ করুন । আপনি কেবলমাত্র একটি ধারা পছন্দ করতে পারেন ।</string>
+    <string name="short_s.no_drafts">কোনো ছোট গল্প এখনও ড্রাফ্ট হয়নি</string>
+    <string name="short_s.no_published">কোনো ছোট গল্প এখনও পাবলিশ হয়নি</string>
+    <string name="short_s.view_replies">View replies</string>
+    <string name="short_s.choose_topic">Please choose at least one topic to continue</string>
+    <string name="short_s.add_comment_fail">Failed to add comment. Please try again</string>
+    <string name="short_s.edit_comment_fail">Failed to edit comment. Please try again</string>
+    <string name="short_s.delete_comment_fail">Failed to delete comment. Please try again</string>
+    <string name="short_s.add_reply_fail">Failed to add reply. Please try again</string>
+    <string name="short_s.edit_reply_fail">Failed to edit reply. Please try again</string>
+    <string name="short_s.delete_reply_fail">Failed to delete reply. Please try again</string>
+
+    <string name="report.reason">অনুপযুক্ত কারণ</string>
+    <string name="report.abuse">এটি অপমানজনক</string>
+    <string name="report.spam">এটা ধর্মীয় ভাবনাকে আঘাত করছে</string>
+    <string name="report.not_relevant">অন্য কিছু</string>
+    <string name="reply">উত্তর</string>
 </resources>
