--- a/MyCity4Kids/MyCity4Kids/res/values-mr/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-mr/strings.xml
@@ -344,7 +344,7 @@
     <string name="myprofile.following_label">फॉलोविंग </string>
     <string name="myprofile.followers_label">फॉलोवर्स </string>
     <string name="myprofile.section.articles_label">लेख</string>
-    <string name="myprofile.section.short_story_label">100 WORD STORY</string>
+    <string name="myprofile.section.short_story_label">#100 शब्दांची गोष्ट</string>
     <string name="myprofile.section.videos_label">मॉम वलॉग्स</string>
     <string name="myprofile.section.activity_label">गोष्टी </string>
     <string name="myprofile.section.myranking_label">माझा क्रमांक </string>
@@ -657,4 +657,32 @@
     <string name="author_type.user">USER</string>
 
     <string name="no_article.be_first">ह्या श्रेणी मध्ये लेख लिहिणारे पहिले लेखक  व्हा</string>
+    <string name="no_story.be_first">Be the first one to write stories in this category!</string>
+
+    <string name="random_text">Your trekking to Stok Kangri begins with the arrival to Leh. You can easily reach Leh once you come to Delhi. You can reach Leh from Delhi either through a flight or through the road. Taking the flight is a better option as you would be saving a lot on time and energy. Taking the road may cost you a lot of time as you have to first go to either Srinagar or Manali to start for Leh. You can spend a day in Leh to acclimatize to the weather. Trekking in the area of Leh is among the best options among Trekking in India</string>
+    <string name="random_100_words">Trekking to Stok Kangri begins with the arrival to Leh. You can easily reach Leh once you come to Delhi. You can reach Leh from Delhi either through a flight Taking the flight is a better option as you would be saving a lot on time and energy. Taking the road may cost you a lot of time as you have to first go to either Srinagar or Manali to start for Leh. You can spend a day in Leh to acclimatize to the weather. Trekking in the area of Leh is among the best options among Trekking in India</string>
+    <string name="short_s.add_story">100 शब्दात गोष्ट लिहा</string>
+    <string name="short_s.add_comment">टिप्पणी लिहा</string>
+    <string name="short_s.add.title_hint">Write an exciting title that suits your story. Character limit is 60.</string>
+    <string name="short_s.add.body_hint">Write your amazing story or poem in 100 words or less.</string>
+    <string name="short_s.publish_message">अभिनंदन. तुमचा ब्लॉग प्रकाशित झाला आहे. आता तुम्ही तो मित्र आणि परिवारामध्ये शेअर करू शकता</string>
+    <string name="short_s.max_word">तुमचे कथा कमाल 100 शब्दापर्यंत असावी.</string>
+    <string name="short_s.choose_genre">तुमच्या कथेची शैली निवडा</string>
+    <string name="short_s.choose_one_genre">तुमच्या कथेची शैली निवडा जी तुमच्या कथेचे खूप चांगल्या प्रकारे विश्लेषण करू शकेल. तुम्ही कोणतीही १ शैली निवडा.</string>
+    <string name="short_s.no_drafts">आतापर्यंत कोणतीही छोटी कथा तयार केली गेली नाहीये.</string>
+    <string name="short_s.no_published">आतापर्यंत कोणतीही छोटी कथा प्रकाशित केली गेली नाहीये.</string>
+    <string name="short_s.view_replies">View replies</string>
+    <string name="short_s.choose_topic">Please choose at least one topic to continue</string>
+    <string name="short_s.add_comment_fail">Failed to add comment. Please try again</string>
+    <string name="short_s.edit_comment_fail">Failed to edit comment. Please try again</string>
+    <string name="short_s.delete_comment_fail">Failed to delete comment. Please try again</string>
+    <string name="short_s.add_reply_fail">Failed to add reply. Please try again</string>
+    <string name="short_s.edit_reply_fail">Failed to edit reply. Please try again</string>
+    <string name="short_s.delete_reply_fail">Failed to delete reply. Please try again</string>
+
+    <string name="report.reason">हे उपयोगी नाही कारण</string>
+    <string name="report.abuse">हे अपमानास्पद आहे.</string>
+    <string name="report.spam">हे धार्मिक भावनांना नुकसान पोहचवत आहे.</string>
+    <string name="report.not_relevant">दुसरं अन्य</string>
+    <string name="reply">उत्तर द्या</string>
 </resources>
