Group bug fixes

--- a/MyCity4Kids/MyCity4Kids/res/values/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values/strings.xml
@@ -661,9 +661,12 @@
 
     <string name="no_article.be_first">Be the first one to write articles in this category!</string>
 
-    <string name="home_screen.groups.title">GROUPS</string>
+    <string name="home_screen.groups.title">SUPPORT GROUPS</string>
     <string name="groups.summary">SUMMARY</string>
-    <string name="groups.join_label">Lorem Ipsum</string>
+    <string name="groups.add_image">ADD IMAGE</string>
+    <string name="groups.image_poll">IMAGE POLL</string>
+    <string name="groups.text_poll">TEXT POLL</string>
+    <string name="groups.join_label">GROUPS YOU ARE A MEMBER OF</string>
     <string name="groups.sections.about">ABOUT</string>
     <string name="groups.sections.discussions">DISCUSSION</string>
     <string name="groups.sections.blogs">BLOGS</string>
@@ -685,6 +688,7 @@
     <string name="groups.join_form">JOINING FORM</string>
     <string name="groups.member_label">MEMBERS</string>
     <string name="groups.reported_content">REPORTED CONTENT</string>
+    <string name="groups.anonymous">ANONYMOUS</string>
 
     <string name="no_story.be_first">Be the first one to write stories in this category!</string>
 
